# 42_Leaffliction

./: .gitignore  README.md  pyproject.toml  script_start.sh
best_model/: best_model_epoch_1.pt  best_model_epoch_11.pt  best_model_epoch_11_classification_report.csv  best_model_epoch_11_classification_report.txt  best_model_epoch_11_predictions.csv  best_model_epoch_15.pt  best_model_epoch_15_classification_report.csv  best_model_epoch_15_classification_report.txt  best_model_epoch_15_predictions.csv  best_model_epoch_1_classification_report.csv  best_model_epoch_1_classification_report.txt  best_model_epoch_1_predictions.csv
notebooks/: arielle_training_eval.ipynb  train.ipynb
notebooks/learning_curves_2025-09-17 17:53:14.126167/: history.csv
notebooks/learning_curves_2025-09-17 18:27:06.952330/: classification_report.csv  classification_report_train.txt  classification_report_val.txt  history.csv
scripts/: Augmentation.py  Distribution.py  Transformation.py  predict.py  predictMai.py  presictMai.ipynb  train.py
scripts/archive/: train_old.py
scripts/utils/: data.py  load_data.py  logger.py  model.py  train_plots.py
