
[project]
name = "42-leaffliction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "kaleido>=1.0.0",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "ruff>=0.12.7",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
